--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </ul>
         </div>
         <div>
-          <button class="btn btn-ghost btn-circle hidden">
+          <button class="btn btn-ghost btn-circle ">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
               stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -88,7 +88,7 @@
         <div
           class="absolute flex justify-between transform -translate-y-1/2 top-48 pl-6 pr-6 left-5 right-5 lg:top-2/4 ">
 
-          <a href="#slide4" class="btn btn-circle">❮</a>
+          <a href="#slide1" class="btn btn-circle">❮</a>
           <a href="#slide2" class="btn btn-circle">❯</a>
         </div>
       </div>
@@ -98,10 +98,10 @@
 
         <img src="Images/image.jpg" class="w-full" />
         <div
-          class="absolute flex justify-between transform -translate-y-1/2 top-48 pl-6 pr-6 left-5 right-5 lg:top-96 ">
+          class="absolute flex justify-between transform -translate-y-1/2 top-48 pl-6 pr-6 left-5 right-5 lg:top-2/4 ">
 
-          <a href="#slide4" class="btn btn-circle">❮</a>
-          <a href="#slide2" class="btn btn-circle">❯</a>
+          <a href="#slide2" class="btn btn-circle">❮</a>
+          <a href="#slide1" class="btn btn-circle">❯</a>
         </div>
       </div>
 
@@ -153,7 +153,7 @@
 
 
       </div>
-      <hr class="border-dashed w-[73rem] h-[0.0625rem] bg-[#13131833] mt-[6.25rem] lg:ml-24">
+      <hr class="border-dashed lg:w-[73rem] h-[0.0625rem] bg-[#13131833] mt-[6.25rem] lg:ml-24">
 
     </section>
     <!--program section-->
@@ -161,7 +161,7 @@
       <h2 class="text-4xl font-extrabold text-center">Program Sections</h2>
       <p class="text-xl text-center mt-16">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
         placerat <br> dolor. Purus urna in sit nullam proin. </p>
-      <hr class="border-dashed w-[73rem] h-[0.0625rem] bg-[#13131833] mt-8 lg:ml-24">
+      <hr class="border-dashed lg:w-[73rem] h-[0.0625rem] bg-[#13131833] mt-8 lg:ml-24">
       <div class="flex flex-col lg:flex-row gap-4 mt-16 justify-center items-center">
         <div class="bg-[linear-gradient(45deg,rgba(0,0,0,0.5),rgba(0,0,0,0.1)),url(Images/2.png)] bg-no-repeat bg-cover bg-center rounded-2xl ">
           <div class="py-16 px-6 ">
@@ -199,7 +199,7 @@
 
 
       </div>
-      <hr class="border-dashed w-[73rem] h-[0.0625rem] bg-[#13131833] mt-[6.25rem] lg:ml-24">
+      <hr class="border-dashed lg:w-[73rem] h-[0.0625rem] bg-[#13131833] mt-[6.25rem] lg:ml-24">
 
 
     </section>
@@ -208,7 +208,7 @@
       <h2 class="text-4xl font-extrabold text-center">Our New Products</h2>
       <p class="text-xl text-center mt-16">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
         placerat <br> dolor. Purus urna in sit nullam proin. </p>
-      <hr class="border-dashed  lg: w-[73rem] h-[0.0625rem] bg-[#13131833] mt-8 lg:ml-24">
+      <hr class="border-dashed  lg:w-[73rem] h-[0.0625rem] bg-[#13131833] mt-8 lg:ml-24">
       <div class="flex flex-col lg:flex-row gap-10 justify-center mt-10">
         <div class="space-y-5">
           <div class="card   lg:card-side bg-base-100 shadow-xl">
@@ -346,7 +346,7 @@
               <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
             </div>
           </div>
-          <hr class="w-[38.5625rem] h-[0.0625rem] bg-[#13131833]">
+          <hr class="lg:w-[38.5625rem] h-[0.0625rem] bg-[#13131833]">
           <div class="collapse collapse-plus">
             <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-2xl font-semibold">
@@ -356,7 +356,7 @@
               <p>hello</p>
             </div>
           </div>
-          <hr class="w-[38.5625rem] h-[0.0625rem] bg-[#13131833]">
+          <hr class="lg:w-[38.5625rem] h-[0.0625rem] bg-[#13131833]">
           <div class="collapse collapse-plus ">
             <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-2xl font-semibold">
@@ -366,7 +366,7 @@
               <p>hello</p>
             </div>
           </div>
-          <hr class="w-[38.5625rem] h-[0.0625rem] bg-[#13131833]">
+          <hr class="lg:w-[38.5625rem] h-[0.0625rem] bg-[#13131833]">
           <div class="collapse collapse-plus ">
             <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-2xl font-semibold">
@@ -376,7 +376,7 @@
               <p>hello</p>
             </div>
           </div>
-          <hr class="w-[38.5625rem] h-[0.0625rem] bg-[#13131833]">
+          <hr class="lg:w-[38.5625rem] h-[0.0625rem] bg-[#13131833]">
           <div class="collapse collapse-plus ">
             <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-2xl font-semibold">
@@ -386,7 +386,7 @@
               <p>hello</p>
             </div>
           </div>
-          <hr class="w-[38.5625rem] h-[0.0625rem] bg-[#13131833]">
+          <hr class="lg:w-[38.5625rem] h-[0.0625rem] bg-[#13131833]">
           <div class="collapse collapse-plus ">
             <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-2xl font-semibold">
@@ -407,17 +407,17 @@
         placerat <br> dolor. Purus urna in sit nullam proin. </p>
       <div class="flex flex-col lg:flex-row gap-20 justify-center mt-24">
         <div class="space-y-4 mt-5">
-          <div class="w-[23.375rem] h-[13.5rem] bg-[#BCED6D1A] space-y-5 py-9 pl-10 rounded-2xl">
+          <div class=" lg:w-[23.375rem] lg:h-[13.5rem] bg-[#BCED6D1A] space-y-5 py-9 pl-10 rounded-2xl">
             <img src="Images/Group 1171275317.png" alt="">
             <p class="text-sm font-bold text-[#13131866]">Phone Number : </p>
             <p class="text-lg text-[#131318 font-extrabold] ">(+62) 123-321-543</p>
           </div>
-          <div class=" w-[23.375rem] h-[13.5rem] bg-[#FDDD5F1A] space-y-5 py-9 pl-10 rounded-2xl">
+          <div class=" lg:w-[23.375rem] lg:h-[13.5rem] bg-[#FDDD5F1A] space-y-5 py-9 pl-10 rounded-2xl">
             <img src="Images/Group 1171275318.png" alt="">
             <p class="text-sm font-bold text-[#13131866]">Email :</p>
             <p class="text-lg text-[#131318 font-extrabold] ">hockeys@support.com</p>
           </div>
-          <div class="w-[23.375rem] h-[13.5rem] bg-[#629CF31A] space-y-5 py-9 pl-10 rounded-2xl">
+          <div class="lg:w-[23.375rem] lg:h-[13.5rem] bg-[#629CF31A] space-y-5 py-9 pl-10 rounded-2xl">
             <img src="Images/Group 1171275321.png" alt="">
             <p class="text-sm font-bold text-[#13131866]">Location :</p>
             <p class="text-lg text-[#131318 font-extrabold] ">152/1 Mohakhali Wireless Gate</p>
@@ -427,7 +427,7 @@
         </div>
         <div>
           <div>
-            <form class="flex flex-row gap-4">
+            <form class="flex flex-row gap-4 ">
               <div>
                 <div class="form-control">
                   <label class="label">
@@ -476,7 +476,7 @@
             </div>
             <div>
               <h4 class="label-text text-2xl font-semibold text-[#131318]">Message</h4>
-              <textarea class="textarea w-[42rem] h-[23rem] bg-[#13131808]" placeholder="Write your message"></textarea>
+              <textarea class="textarea container mx-auto h-[23rem] bg-[#13131808]" placeholder="Write your message"></textarea>
             </div>
           </div>
 
@@ -517,8 +517,8 @@
 
   </main>
   <footer class="my-24 footer p-10 bg-[#131318] text-base-content">
-    <aside class="mx-28">
-      <h4 class="text-2xl font-extrabold text-white">Get In Touch</h4>
+    <aside class="mx-28 lg:mx-10 ">
+      <h4 class="text-2xl font-extrabold text-white ">Get In Touch</h4>
       <p class="text-[#FFFFFF99]">Dit amet consectetur. Condimentum <br> adipiscing aliquam turpis placerat dolor. Purus
         <br> urna in sit nullam proin. </p>
       <div class="flex items-center gap-3">
@@ -540,7 +540,7 @@
     </aside>
 
 
-   <div class="flex  gap-20 mx-28 lg:mx-32">
+   <div class="flex  gap-28 mx-28 lg:ml-40">
     <div class="text-[#FFFFFF99] flex flex-col">
 
       <header class="footer-title text-xl text-[#FFFFFF] text-bold">Company</header>
@@ -551,7 +551,7 @@
       <a class="link link-hover  ">Legal Notice</a>
 
     </div>
-    <div class="text-[#FFFFFF99] flex flex-col">
+    <div class="text-[#FFFFFF99] flex flex-col ">
 
       <header class="footer-title text-xl text-bold text-[#FFFFFF] ">Support</header>
       <a class="link link-hover">Help Center</a>
