added the get in touch section

--- a/index.html
+++ b/index.html
@@ -427,21 +427,21 @@
         </div>
         <div>
           <div>
-            <form class="flex flex-row gap-4 ">
+            <form class="flex flex-col lg:flex-row gap-4 ">
               <div>
                 <div class="form-control">
                   <label class="label">
                     <h4 class="label-text text-2xl font-semibold text-[#131318]">Your Name</h4>
                   </label>
                   <input type="text" placeholder="Enter your full name"
-                    class="input input-bordered w-[20.25rem] h-[4rem] bg-[#13131808]" required />
+                    class="input input-bordered  lg:w-[20.25rem] h-[4rem] bg-[#13131808]" required />
                 </div>
                 <div class="form-control">
                   <label class="label">
                     <h4 class="label-text text-2xl font-semibold text-[#131318]">Subject</h4>
                   </label>
                   <input type="text" placeholder="Enter your subject"
-                    class="input input-bordered w-[20.25rem] h-[4rem] bg-[#13131808]" required />
+                    class="input input-bordered lg:w-[20.25rem] h-[4rem] bg-[#13131808]" required />
 
                 </div>
               </div>
@@ -452,14 +452,14 @@
                       <h4 class="label-text text-2xl font-semibold text-[#131318]">Your Email</h4>
                     </label>
                     <input type="email" placeholder="Enter your email"
-                      class="input input-bordered w-[20.25rem] h-[4rem] bg-[#13131808]" required />
+                      class="input input-bordered lg:w-[20.25rem] h-[4rem] bg-[#13131808]" required />
                   </div>
                   <div class="form-control">
                     <label class="label">
                       <h4 class="label-text text-2xl font-semibold text-[#131318]">Phone Number</h4>
                     </label>
                     <input type="number" placeholder="Enter your subject"
-                      class="input input-bordered w-[20.25rem] h-[4rem] bg-[#13131808]" required />
+                      class="input input-bordered lg:w-[20.25rem] h-[4rem] bg-[#13131808]" required />
 
                   </div>
 
