--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </ul>
         </div>
         <div>
-          <button class="btn btn-ghost btn-circle ">
+          <button class="btn btn-ghost btn-circle hidden lg:block ">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
               stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -108,8 +108,7 @@
     </div>
     <div class="w-full bg-[#131318] drop-shadow-lg rounded-2xl p-5 lg:w-1/2 lg:ml-[590px] lg:-mt-44">
       <h6 class="text-2xl font-extrabold text-white">Meet all the heroes from the field</h6>
-      <p class="text-white mt-5">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor.
-        Purus urna in sit nullam proin. </p>
+      <p class="text-white mt-5">With ten men’s teams, six ladies teams ,a range of youth teams, and Back to Hockey sessions, Woking Hockey Club offers hockey to players of any ability. </p>
 
     </div>
 
@@ -121,8 +120,7 @@
     <!--professional club-->
     <section class="my-24 ">
       <h3 class="text-4xl font-extrabold mt-16 text-center">Professional Hockeys Club</h3>
-      <p class="text-center text-[#13131899] mt-8">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
-        placerat <br> dolor. Purus urna in sit nullam proin. </p>
+      <p class="text-center text-[#13131899] mt-8">Professional leagues emerged from amateur leagues. In 1904, the predominantly <br> U.S.-based International Professional Hockey League (IPHL) hosted the first Canadian professional team,. </p>
       <div class="mx-auto lg:flex justify-center items-center gap-8 mt-16">
         <div class="text-center">
           <div class="radial-progress text-[#FF4240] " style="--value:87;" role="progressbar"><span
@@ -159,15 +157,14 @@
     <!--program section-->
     <section class="my-24 container mx-auto">
       <h2 class="text-4xl font-extrabold text-center">Program Sections</h2>
-      <p class="text-xl text-center mt-16">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
-        placerat <br> dolor. Purus urna in sit nullam proin. </p>
+      <p class="text-xl text-center mt-16">Hockeys club Group is an international group of five outdoor brands and five multi-brand outdoor <br> retailers, operating in different markets. </p>
       <hr class="border-dashed lg:w-[73rem] h-[0.0625rem] bg-[#13131833] mt-8 lg:ml-24">
       <div class="flex flex-col lg:flex-row gap-4 mt-16 justify-center items-center">
         <div class="bg-[linear-gradient(45deg,rgba(0,0,0,0.5),rgba(0,0,0,0.1)),url(Images/2.png)] bg-no-repeat bg-cover bg-center rounded-2xl ">
           <div class="py-16 px-6 ">
             <h4 class="text-xl font-extrabold text-white">Junior Program</h4>
-            <p class="text-white mt-3">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
-              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.
+            <p class="text-white mt-3">Professional leagues emerged from amateur leagues. In 1904, the predominantly
+              U.S.-based International Professional Hockey League (IPHL) hosted the first Canadian professional team
             </p>
             <button class="btn bg-hockeys-primary text-white text-xl border-none mt-4">Register Now!</button>
           </div>
@@ -177,8 +174,7 @@
         <div class="bg-[linear-gradient(45deg,rgba(0,0,0,0.5),rgba(0,0,0,0.1)),url(Images/3.png)] bg-no-repeat bg-cover bg-center rounded-2xl ">
           <div class="py-16 px-6 ">
             <h4 class="text-xl font-extrabold text-white">Teenager Program</h4>
-            <p class="text-white mt-3">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
-              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.
+            <p class="text-white mt-3">Teenagers are more independent and sometimes more focused than younger children. Often, though not always, they have specific ideas about how they want to spend their spare time. 
             </p>
             <button class="btn bg-hockeys-primary text-white text-xl border-none mt-4">Register Now!</button>
           </div>
@@ -192,8 +188,8 @@
         class="bg-[linear-gradient(45deg,rgba(0,0,0,0.5),rgba(0,0,0,0.1)),url(Images/4.png)] bg-no-repeat w-full bg-cover bg-center  rounded-2xl  mt-4">
         <div class=" py-16 lg:pt-64 px-6 ">
           <h4 class="text-xl font-extrabold text-white">Professional Program</h4>
-          <p class="text-white mt-3">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
-            enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+          <p class="text-white mt-3">Professional leagues emerged from amateur leagues. In 1904, the predominantly
+            U.S.-based International Professional Hockey League <br> (IPHL) hosted the first Canadian professional team.</p>
           <button class="btn bg-hockeys-primary text-white text-xl border-none mt-4">Register Now!</button>
         </div>
 
@@ -206,8 +202,7 @@
     <!--new product section-->
     <section class="my-24 container mx-auto">
       <h2 class="text-4xl font-extrabold text-center">Our New Products</h2>
-      <p class="text-xl text-center mt-16">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
-        placerat <br> dolor. Purus urna in sit nullam proin. </p>
+      <p class="text-xl text-center mt-16">New Products,Find Easily. Quick Results. Easy Access. Compare Products. Search and <br> Discover. Services: Best Results, Explore Now, New Sources, </p>
       <hr class="border-dashed  lg:w-[73rem] h-[0.0625rem] bg-[#13131833] mt-8 lg:ml-24">
       <div class="flex flex-col lg:flex-row gap-10 justify-center mt-10">
         <div class="space-y-5">
@@ -328,11 +323,10 @@
     </section>
     <!--Question section-->
     <h2 class="text-4xl font-extrabold text-center">Clients Question</h2>
-    <p class="text-xl text-center mt-16">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
-      placerat <br> dolor. Purus urna in sit nullam proin. </p>
+    <p class="text-xl text-center mt-16">Search a Wide Range of Results Across the Web. Save Time. Visit Our Website. </p>
     <section class="my-24 container mx-auto  border border-solid rounded-2xl p-4 ">
     
-      <div class="flex flex-col lg:flex-row gap-4  justify-center items-center  ">
+      <div class="flex flex-col lg:flex-row gap-6  justify-center items-center  ">
         <div>
           <img class=" w-full lg:w-[27.5625rem] h-[29.375rem]" src="Images/11.png" alt="">
         </div>
@@ -343,7 +337,7 @@
               Our Equipment
             </div>
             <div class="collapse-content">
-              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              <p>Our equipment donations are a great way to help those in need. <br> Whether you’re donating to a club <br> or other hockeys facility, there are a few things you should know ...</p>
             </div>
           </div>
           <hr class="lg:w-[38.5625rem] h-[0.0625rem] bg-[#13131833]">
@@ -540,25 +534,25 @@
     </aside>
 
 
-   <div class="flex  gap-28 mx-28 lg:ml-40">
-    <div class="text-[#FFFFFF99] flex flex-col">
+   <div class="flex  gap-28 mx-auto lg:ml-40">
+    <div class=" flex flex-col">
 
-      <header class="footer-title text-xl text-[#FFFFFF] text-bold">Company</header>
-      <a class="link link-hover ">About us</a>
-      <a class="link link-hover ">Leadership</a>
-      <a class="link link-hover ">Careers</a>
-      <a class="link link-hover "> News & Article</a>
-      <a class="link link-hover  ">Legal Notice</a>
+      <header class="footer-title text-xl text-white text-bold">Company</header>
+      <a class="link link-hover text-[#FFFFFF99]">About us</a>
+      <a class="link link-hover text-[#FFFFFF99]">Leadership</a>
+      <a class="link link-hover text-[#FFFFFF99]">Careers</a>
+      <a class="link link-hover text-[#FFFFFF99] "> News & Article</a>
+      <a class="link link-hover  text-[#FFFFFF99]">Legal Notice</a>
 
     </div>
-    <div class="text-[#FFFFFF99] flex flex-col ">
+    <div class=" flex flex-col ">
 
-      <header class="footer-title text-xl text-bold text-[#FFFFFF] ">Support</header>
-      <a class="link link-hover">Help Center</a>
-      <a class="link link-hover">FAQ</a>
-      <a class="link link-hover">Ticket Support
+      <header class="footer-title text-xl text-bold text-white ">Support</header>
+      <a class="link link-hover text-[#FFFFFF99]">Help Center</a>
+      <a class="link link-hover text-[#FFFFFF99]">FAQ</a>
+      <a class="link link-hover text-[#FFFFFF99]">Ticket Support
       </a>
-      <a class="link link-hover">Contact Us</a>
+      <a class="link link-hover text-[#FFFFFF99]">Contact Us</a>
 
     </div>
    </div>
@@ -566,13 +560,13 @@
 
 
 
-    <nav class="text-[#FFFFFF99] mx-48">
-      <header class="footer-title text-2xl text-bold text-[#FFF]">Services</header>
-      <a class="link link-hover">Academy</a>
-      <a class="link link-hover">Group Lesson</a>
-      <a class="link link-hover">Private Lesson</a>
-      <a class="link link-hover">Hockeys for kids</a>
-      <a class="link link-hover">Hockeys for Adult</a>
+    <nav class=" mx-48">
+      <header class="footer-title text-2xl text-bold text-white">Services</header>
+      <a class="link link-hover text-[#FFFFFF99]">Academy</a>
+      <a class="link link-hover text-[#FFFFFF99]">Group Lesson</a>
+      <a class="link link-hover text-[#FFFFFF99]">Private Lesson</a>
+      <a class="link link-hover text-[#FFFFFF99]">Hockeys for kids</a>
+      <a class="link link-hover text-[#FFFFFF99]">Hockeys for Adult</a>
     </nav>
   </footer>
 
